k8s/deployment-debug.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-springboot-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      serviceAccountName: k8s-springboot-dashboard-sa  # ✅ Fixed
      containers:
        - name: dashboard
          image: k8s-springboot-dashboard
          args: ["node", "--inspect-brk=0.0.0.0:9229", "dist/server.js"]
          ports:
            - containerPort: 3000
            - containerPort: 9229
